--- a/index.html
+++ b/index.html
@@ -64,6 +64,25 @@
       padding: 1rem;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
+    #chatSection {
+      display: none;
+    }
+    #chatBox {
+      height: 200px;
+      overflow-y: auto;
+      background: #f8f9fa;
+    }
+    .chat-message {
+      margin-bottom: 0.5rem;
+    }
+    .chat-message.user {
+      text-align: right;
+      color: #000;
+    }
+    .chat-message.bot {
+      text-align: left;
+      color: #444;
+    }
   </style>
 </head>
 <body>
@@ -77,6 +96,7 @@
       <div class="col-lg-8">
         <div class="main-box">
           <textarea id="storyInput" rows="5" class="form-control mb-3" placeholder="Paste your experience story here..."></textarea>
+          <textarea id="instructionsInput" rows="2" class="form-control mb-3" placeholder="Optional: Add instructions like 'Make it technical' or 'Add more metrics'..."></textarea>
           <button class="btn btn-primary w-100" onclick="generateBullet()">Generate Resume Bullet & Questions</button>
 
           <div class="loader" id="loader">
@@ -88,8 +108,16 @@
             <p id="bulletOutput">...</p>
 
             <h5 class="mt-4">💬 Suggested Interview Questions</h5>
-            <ul id="questionList" class="ps-3"></ul>
+            <div id="questionList" class="ps-3"></div>
           </div>
+        </div>
+
+        <!-- Chat Section -->
+        <div id="chatSection">
+          <h5 class="mt-4">💡 Ask AI: Prepare Smarter</h5>
+          <div id="chatBox" class="border rounded p-3 mb-2"></div>
+          <input type="text" id="userChatInput" class="form-control" placeholder="Ask a question about your bullet...">
+          <button class="btn btn-sm btn-primary mt-2" onclick="sendToChat()">Ask AI</button>
         </div>
       </div>
 
@@ -107,12 +135,17 @@
   </div>
 
   <footer class="text-center mt-5 mb-3 text-muted small">
-    Created for live demo · Demo For Cantilever Labs
+    Created for live demo by @saichothave· Cantilever Labs
   </footer>
 
   <script>
+    let contextStory = "";
+    let contextBullet = "";
+    let contextQuestions = "";
+
     async function generateBullet() {
       const story = document.getElementById("storyInput").value;
+      const instructions = document.getElementById("instructionsInput").value;
       const loader = document.getElementById("loader");
       const bulletOutput = document.getElementById("bulletOutput");
       const questionList = document.getElementById("questionList");
@@ -120,26 +153,67 @@
       loader.style.display = "block";
       bulletOutput.innerText = "...";
       questionList.innerHTML = "";
+      document.getElementById("chatSection").style.display = "none";
+      document.getElementById("chatBox").innerHTML = "";
 
-      const response = await fetch("https://0e3d45b1ec8e.ngrok-free.app/generate", {
+      const response = await fetch("https://2531b5b11871.ngrok-free.app/generate", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
         },
-        body: JSON.stringify({ story })
+        body: JSON.stringify({ story, instructions })
       });
 
       const data = await response.json();
 
+      contextStory = story;
+      contextBullet = data.bullet.trim();
+      contextQuestions = data.questions.trim();
+
       loader.style.display = "none";
-      bulletOutput.innerText = data.bullet.trim();
+      bulletOutput.innerText = contextBullet;
       data.questions.trim().split("\n").forEach(q => {
         if (q.trim()) {
-          const li = document.createElement("li");
-          li.innerText = q.trim();
-          questionList.appendChild(li);
+          const div = document.createElement("div");
+          div.innerText = q.trim();
+          questionList.appendChild(div);
         }
       });
+
+      document.getElementById("chatSection").style.display = "block";
+      addChatMessage("bot", "You can now ask me anything about your bullet to prepare smarter.");
+    }
+
+    async function sendToChat() {
+      const userInput = document.getElementById("userChatInput").value.trim();
+      if (!userInput) return;
+
+      addChatMessage("user", userInput);
+      document.getElementById("userChatInput").value = "";
+
+      const response = await fetch("https://2531b5b11871.ngrok-free.app/chat", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+          story: contextStory,
+          bullet: contextBullet,
+          questions: contextQuestions,
+          user_query: userInput
+        })
+      });
+
+      const data = await response.json();
+      addChatMessage("bot", data.reply.trim());
+    }
+
+    function addChatMessage(sender, text) {
+      const msg = document.createElement("div");
+      msg.classList.add("chat-message", sender);
+      msg.innerText = text;
+      document.getElementById("chatBox").appendChild(msg);
+      document.getElementById("chatBox").scrollTop = document.getElementById("chatBox").scrollHeight;
     }
 
     function fillExample(el) {
