updated donut chart size

--- a/resume_score.html
+++ b/resume_score.html
@@ -55,7 +55,7 @@
 
         <div class="bg-white shadow-md rounded-lg p-4 w-full max-w-xs mx-auto">
             <h3 class="text-lg font-semibold text-gray-800 mb-4 text-center">Resume Analysis</h3>
-            <div class="relative w-40 mx-auto">
+            <div class="relative w-52 mx-auto pb-4">
                 <canvas id="analysisChart" class="w-full aspect-square"></canvas>
             </div>
         </div>
