--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       document.getElementById("chatSection").style.display = "none";
       document.getElementById("chatBox").innerHTML = "";
 
-      const response = await fetch("http://127.0.0.1:8000/generate", {
+      const response = await fetch("https://interview-prep-assistant-ai-based.onrender.com/generate", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ story, instructions })
@@ -188,7 +188,7 @@
         return;
       }
 
-      const response = await fetch("http://127.0.0.1:8000/generate_questions", {
+      const response = await fetch("https://interview-prep-assistant-ai-based.onrender.com/generate_questions", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ bullet: contextBullet, story: contextStory })
@@ -218,7 +218,7 @@
       addChatMessage("user", userInput);
       document.getElementById("userChatInput").value = "";
 
-      const response = await fetch("http://127.0.0.1:8000/chat", {
+      const response = await fetch("https://interview-prep-assistant-ai-based.onrender.com/chat", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
